--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body class="is-loading">
         <video autoplay loop id="video-background">
-  <source src="beach.mp4" type="video/mp4">
+  <source src="http://beta.mattgrossdesign.com/sites/default/files/wood%20autumn-HD.mp4" type="video/mp4">
 </video>
 
 		<!-- Wrapper -->
