--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
+							<h1>Positivity</h1>
 							<p>Senior Psychonautics Engineer</p>
 						</header>
 						<!--
