--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
-        <video autoplay loop id="video-background" muted>
+        <video autoplay loop id="video-background">
   <source src="http://beta.mattgrossdesign.com/sites/default/files/wood%20autumn-HD.mp4" type="video/mp4">
 </video>
 
